removed plugin.quick target, now use dist.done for building devel.prep
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15296 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/build.xml
+++ b/build.xml
@@ -96,7 +96,7 @@ TARGETS SUPPORTING DEVELOPMENT WITHIN ECLIPSE
 ============================================================================ -->
 
   <target name="devel.prep">
-    <ant dir="${scala.dir}" antfile="build.xml" target="plugin.quick" inheritall="false"/>
+    <ant dir="${scala.dir}" antfile="build.xml" target="dist.done" inheritall="false"/>
     <ant dir="${scala.lib.dir}" antfile="build.xml" target="build" inheritall="false"/>
   </target>
   
