JDT integration improvements.
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15574 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -623,10 +623,10 @@
       id="scala.tools.eclipse.javaelements.ScalaCompilationUnitFilter"/>
     <filter
       id="scala.tools.eclipse.javaelements.ScalaElementFilter"
-      name="Scala primary constructor filter"
-      description="Prevents Scala primary constructors from appearing in the Package Explorer"
+      name="Scala element filter"
+      description="Prevents Scala elements which are artefacts of the Scala to Java encoding from appearing in the Package Explorer"
       class="scala.tools.eclipse.javaelements.ScalaElementFilter"
-      enabled="false"/>      
+      enabled="true"/>      
   </extension>
 
   <extension point="org.eclipse.ui.decorators">
