Include Scala Swing in the classpath container and on the classpath for the embedded console. Avoid running partest when building a plugin distribution.
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15653 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/build.xml
+++ b/build.xml
@@ -107,7 +107,7 @@ TARGETS SUPPORTING DEVELOPMENT WITHIN ECLIPSE
   </target>
   
   <target name="devel.dist" depends="devel.clean">
-    <ant dir="${scala.dir}" antfile="build.xml" target="dist" inheritall="false"/>
+    <ant dir="${scala.dir}" antfile="build.xml" target="dist.done" inheritall="false"/>
     <ant dir="${scala.lib.dir}" antfile="build.xml" target="dist" inheritall="false"/>
     <antcall target="dist"/>
   </target>
