removed build.number, now using the one from the core scala project. added error message to 'ant dist' if scala-library osgi is missing
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15773 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/build.xml
+++ b/build.xml
@@ -75,7 +75,7 @@ INITIALISE BUILD
         defaultValue="0"/>
     <property name="init.avail" value="yes"/>
     <!-- Generating version number -->
-    <property file="${basedir}/build.number"/>
+    <property file="${scala.dir}/build.number"/>
     <property
       name="plugin.version.number"
       value="${version.major}.${version.minor}.${version.patch}.r${svn.number}-b${time.short}"/>
@@ -166,6 +166,12 @@ PACKAGE FEATURE AND CREATE UPDATE SITE
 ============================================================================ -->
   
   <target name="dist" depends="init, build">
+
+    <fail message="Folder '${scala.lib.dir}' does not contain a suitable Scala library. Call 'ant dist' on the scala-library project first.">
+      <condition><not><and>
+        <available file="${scala.lib.dir}/scala.library_${library.version.number}.jar"/>
+      </and></not></condition>
+    </fail>
     
     <filter token="PLUGIN_VERSION" value="${plugin.version.number}"/>
     <filter token="LIBRARY_VERSION" value="${library.version.number}"/>
