generating md5 sum for zipped plugin
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15777 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/build.xml
+++ b/build.xml
@@ -207,8 +207,10 @@ PACKAGE FEATURE AND CREATE UPDATE SITE
     
     <zip
       destfile="${dist.dir}/${feature.name}.zip"
-      basedir="${dist.dir}/scala.update"
-    />
+      basedir="${dist.dir}/scala.update"/>
+    <checksum
+      file="${dist.dir}/${feature.name}.zip"
+      fileext=".md5"/>
     
   </target>
   
