Fixed various Scala -> Scala, Scala -> Java and Java -> Scala project dependency builder issues. The Java builder is now managed by the Scala builder (fixes #1153 amongst other things). Added support for "Open Type" for Scala and Java types in both Scala and Java projects (fixes #662). Added support for hyperlinks to Scala sources from stacktraces, manifest and plugin.xml files. The JDT now sees ".scala" as a "Java-like" file extension.
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15805 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -45,16 +45,25 @@
             name="Scala Compiler Preferences">
       </page>
    </extension>
+	<extension point="org.eclipse.core.runtime.contentTypes">
+		<content-type id="scalaSource" name="Scala Source File" 
+			base-type="org.eclipse.core.runtime.text"
+			priority="high"				
+			file-extensions="scala"/>
+	</extension>
    
    <extension
          point="org.eclipse.ui.editors">
       <editor
-            class="scala.tools.eclipse.Editor"
-            extensions="scala"
-            icon="icons/scala.png"
+            name="Scala Editor"
+            default="true"
+            icon="icons/full/obj16/scu_obj.gif"
             contributorClass="scala.tools.eclipse.ActionContributor"
-            id="scala.tools.eclipse.Editor"
-            name="Scala Editor"/>
+            class="scala.tools.eclipse.Editor"
+            symbolicFontName="org.eclipse.jdt.ui.editors.textfont"
+            id="scala.tools.eclipse.Editor">
+            <contentTypeBinding contentTypeId="scala.tools.eclipse.scalaSource"/> 
+      </editor>
    </extension>
 	<extension point="org.eclipse.ui.editorActions">
       <editorContribution
@@ -215,9 +224,16 @@
            modes="run, debug"
            name="Scala Application"
            public="true"
-           sourceLocatorId="org.eclipse.jdt.launching.sourceLocator.JavaSourceLookupDirector"
+           sourceLocatorId="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer">
      </launchConfigurationType>
+   </extension>
+   <extension point="org.eclipse.debug.core.sourceLocators">
+   		<sourceLocator
+   			id="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
+   			class="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
+   			name="Scala Source Locator">
+   		</sourceLocator>
    </extension>
    <extension point="org.eclipse.debug.ui.launchConfigurationTypeImages">
      <launchConfigurationTypeImage
