.scala association with the Scala editor missing on a fresh install.
git-svn-id: https://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@15817 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -58,6 +58,7 @@
             name="Scala Editor"
             default="true"
             icon="icons/full/obj16/scu_obj.gif"
+            extensions="scala"
             contributorClass="scala.tools.eclipse.ActionContributor"
             class="scala.tools.eclipse.Editor"
             symbolicFontName="org.eclipse.jdt.ui.editors.textfont"
